tests/checker/fail/omitted_dependency.can
Db = String

Deep = Unit

Mid = Unit

Db => Deep {
    "row for "
        -> Joined(Db.String)
        -> Print
}

Db => Mid {
    Deep()
}

Unit => Program {
    "users-db"
        -> Db
        -> Mid
}
